create swagger docs for all endpoints
