# handler/list_todo.go
@@ -8,6 +8,15 @@ import (
 	"github.com/rrxs/gotodo/types"
 )
 
+// @BasePath /api
+// @Summary List todos
+// @Description Returns all todo items
+// @Tags Todos
+// @Accept json
+// Produce json
+// @Success 200 {object} ListTodoResponse
+// @Failure 500 {object} ErrorResponse
+// @Router /todos [get]
 func ListTodoHandler(c *gin.Context) {
 	todos := []types.Todo{}
 
