# handler/remove_todo.go
@@ -8,6 +8,17 @@ import (
 	"github.com/rrxs/gotodo/types"
 )
 
+// @BasePath /api
+// @Summary Remove todo
+// @Description Remove a todo item
+// @Tags Todos
+// @Accept json
+// Produce json
+// @Param id query string true "Todo ID"
+// @Success 200 {object} RemoveTodoResponse
+// @Failure 400 {object} ErrorResponse
+// @Failure 500 {object} ErrorResponse
+// @Router /todo [delete]
 func RemoveTodoHandler(c *gin.Context) {
 	id := c.Query("id")
 
